Try fix spacing for <br> element in firefox

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -57,7 +57,7 @@ h3 b {
 
 h4,
 h4 b {
-  color: rgb(90,90,90) !important;
+  color: rgb(90, 90, 90) !important;
   font-family: 'Roboto Slab';
   font-size: 16px !important;
   font-weight: 600 !important;
@@ -103,7 +103,7 @@ h4 b {
 }
 
 .block-richtext br {
-  display: block;
+  // display: block;
   margin: 0 !important;
 }
 
